Updated asmdef file

--- a/Editor/com.klazapp.globalmanager.asmdef
+++ b/Editor/com.klazapp.globalmanager.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "NewAssembly",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "Unity.Mathematics"
+    ],
     "includePlatforms": [
         "Editor"
     ],
