--- a/Editor/com.klazapp.globalmanager.asmdef
+++ b/Editor/com.klazapp.globalmanager.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "NewAssembly",
+    "name": "klazapp.global.manager.editor",
     "rootNamespace": "",
     "references": [
         "Unity.Mathematics"
