--- a/Runtime/com.klazapp.globalmanager.asmdef
+++ b/Runtime/com.klazapp.globalmanager.asmdef
@@ -4,9 +4,7 @@
     "references": [
         "Unity.Mathematics"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
