--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.klazapp.globalmanager",
-  "displayName": "Klazapp Global Manager",
+  "displayName": "Unity Global Manager",
   "version": "1.0.0",
   "unity": "2022.3",
   "description": "This custom editor helper tool development",
