--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Unity Global Manager",
   "version": "1.0.0",
   "unity": "2022.3",
-  "description": "This custom editor helper tool development",
+  "description": "Enhance your Unity projects with Klazapp's Global Manager, a utility designed to centralize and streamline common game management tasks. This package provides easy access to time-related variables, default transform values, and optimized WaitForSeconds, significantly reducing repetitive code and improving efficiency across your project.",
   "keywords": [
     "config",
     "file",
